<resources>
    <string name="app_name" translatable="false">Dansek</string>
    <string name="main_intro">Welcome to the night of your dreams</string>
    <string name="logIn_intro">Welcome to Dansek, where you will find your best nights!</string>
    <string name="logIn_nightclubs_intro">Welcome to Dansek, where you can offer your activities to the world</string>
    <string name="Nightclubs_access">Access Nightclubs view</string>
    <string name="login_main_button">Log In</string>
    <string name="login_error_title">Wrong LogIn</string>
    <string name="login_error_empty_email">Empty email!</string>
    <string name="login_error_empty_passwd">Empty password!</string>
    <string name="signUp_main_button">SignUp</string>
    <string name="sign_up_error_title">Wrong SignUp</string>
    <string name="sign_up_error_invalid_email">Invalid email!</string>
    <string name="sign_up_error_passwd_diff">different passwords!</string>
    <string name="hint_Email_LogIn">Email</string>
    <string name="hint_direccion_facturacion_LogIn">Dirección facturacion</string>
    <string name="hint_Password_LogIn">Password</string>
    <string name="hint_repeat_Password_SignUp">Repeat password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="Search_bar">Search...</string>
    <string name="Menu_Home">Home</string>
    <string name="Menu_Profile">Profile</string>
    <string name="Menu_Points">My Points</string>
    <string name="Menu_Tickets">My Tickets</string>
    <string name="Settings">Settings</string>
    <string name="opcion_tarde_1">Tardeo</string>
    <string name="Selectyourcity">Select your city</string>
    <string name="Selectyourzone">Select your zone</string>
    <string name="Anyfacility">Any facility?</string>
    <string name="Uber">Uber</string>
    <string name="Taxi">Taxi</string>
    <string name="Hospital">Hospital</string>
    <string name="title_of_my_points_">Title of my points</string>
    <string name="Points_of_each">Points of each</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="Tardeo">Tardeo</string>
    <string name="AM_6">6 AM</string>
    <string name="Techno">Techno</string>
    <string name="Add_event_bar">Add event</string>
    <string name="OpenMap">Open map</string>
    <string name="Map_question">Are you ready for the best experience of your life?</string>
    <string name="sixam_in">6 AM in Madrid... </string>
    <string name="AQUIVAELMAPA">AQUI VA EL MAPA</string>
    <string name="remember_me">remember me</string>
    <string name="LogOut">Log Out</string>
    <string name="user_id">  User: user_name</string>
    <string name="points_user">  Your points: ... </string>
    <string name="information_user">  Your information </string>
    <string name="edit_profile">  Edit profile </string>
    <string name="privacy">  Privacy </string>
    <string name="notifications">  Notifications </string>
    <string name="configuration">  Configuration </string>
    <string name="terms_cond">  Terms and Conditons </string>
    <string name="help">  Help </string>
    <string name="navigation_drawer_open">open nav bar</string>
    <string name="navigation_drawer_close">close nav var\n</string>

    <!-- Wallet activity -->
    <string name="title_activity_points">Points</string>
    <string name="add_to_google_wallet_button_content_description">Add to Google Wallet</string>
    <string name="sample_pass" translatable="false">Sample Pass</string>
    <string name="google_wallet_status_unavailable" translatable="false">Unfortunately, Google
        Wallet is not available on this phone.
    </string>
    <string name="add_google_wallet_success" translatable="false">The pass was added successfully!
    </string>
    <string name="add_google_wallet_cancelled" translatable="false">The user cancelled adding the
        pass to Google Wallet.
    </string>
    <string name="add_google_wallet_unknown_error" translatable="false">An unknown error occurred
        when adding pass to Google Wallet.
    </string>
</resources>
