<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/color_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.90"
        android:background="@color/background_dark_blue"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="195dp"
        android:layout_marginTop="1dp"
        android:adjustViewBounds="true"

        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/notifications"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/configuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/color_overlay"
        app:layout_constraintVertical_bias="0.917"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/configuration"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:text="@string/privacy"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/terms_cond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="160dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/terms_cond"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/color_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/terms_cond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>