<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/color_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.90"
        android:background="@color/background_dark_blue"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/user_image"
        android:layout_width="33dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:textColor="@color/blue_letter"
        app:drawableEndCompat="@drawable/baseline_profile_30"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/color_overlay"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/edit_profile"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/color_overlay"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/User_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/user_id"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/baseline_profile_30"
        app:layout_constraintBottom_toTopOf="@+id/information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile"
        app:layout_constraintVertical_bias="0.676"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/points_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="264dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/points_user"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/coins_solid"
        app:layout_constraintBottom_toBottomOf="@+id/color_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rectangle_dark_turquesa_20dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/information_user"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/circle_info_solid"
        app:layout_constraintBottom_toTopOf="@+id/points_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/Log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="156dp"
        android:background="@drawable/rectangle_red20dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/LogOut"
        android:textColor="@color/blue_letter"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points_user"
        app:layout_constraintVertical_bias="0.701"
        tools:ignore="MissingConstraints,RtlSymmetry" />



</androidx.constraintlayout.widget.ConstraintLayout>
