<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/color_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.90"
        android:background="@color/background_dark_blue"
        tools:layout_editor_absoluteX="-24dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/Selectyourcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_light_grey_25dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="15dp"
        android:text="@string/Selectyourcity"
        android:textColor="@color/blue_letter"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/flecha_abajo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="166dp" />

    <TextView
        android:id="@+id/Selectyourzone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_light_grey_25dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="15dp"
        android:text="@string/Selectyourzone"
        android:textColor="@color/blue_letter"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/flecha_abajo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="153dp" />

    <TextView
        android:id="@+id/Anyfacility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="15dp"
        android:text="@string/Anyfacility"
        android:textColor="@color/light_grey"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="195dp" />

    <TextView
        android:id="@+id/Uber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:text="@string/Uber"
        android:textColor="@color/light_grey"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="173dp" />


    <TextView
        android:id="@+id/Taxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="15dp"
        android:text="@string/Taxi"
        android:textColor="@color/light_grey"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="240dp" />

    <TextView
        android:id="@+id/Hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:paddingStart="15dp"
        android:text="@string/Hospital"
        android:textColor="@color/light_grey"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="301dp" />

    <TextView
        android:id="@+id/Uber_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_light_grey_25dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:textColor="@color/blue_letter"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/car_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="166dp" />

    <TextView
        android:id="@+id/Taxi_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_light_grey_25dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:textColor="@color/blue_letter"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/taxi_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="248dp" />

    <TextView
        android:id="@+id/Hospital_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_light_grey_25dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:textColor="@color/blue_letter"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/hospital_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="322dp" />

</androidx.constraintlayout.widget.ConstraintLayout>