<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_de_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Vista para aplicar el filtro de color -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:adjustViewBounds="true"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00" />

    <TextView
        android:id="@+id/burguerMenu_nightclubs"
        android:layout_width="35dp"
        android:layout_height="35dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:drawableStartCompat="@drawable/baseline_menu_30" />

    <TextView
        android:id="@+id/mapMenu"
        android:layout_width="35dp"
        android:layout_height="35dp"

        app:drawableStartCompat="@drawable/baseline_map_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="311dp"
        android:layout_height="69dp"
        android:fontFamily="@font/nunito_black"
        android:singleLine="false"
        android:text="@string/Map_question"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/principalRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/principalRectangle"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@drawable/rectangle_light_bg_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">


        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_light_turquesa_20dp"
            android:drawableStart="@drawable/search_lupa"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_extrabold"
            android:hint="@string/Search_bar"
            android:paddingStart="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/Tardeo"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="364dp"
            android:background="@drawable/rectangle_light_turquesa_20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"
            android:text="@string/Tardeo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/AM_6"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/AM_6"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_light_turquesa_20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"
            android:text="@string/AM_6"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
            app:layout_constraintVertical_bias="0.03" />

        <Button
            android:id="@+id/Techno"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="364dp"
            android:background="@drawable/rectangle_light_turquesa_20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"
            android:text="@string/Techno"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toEndOf="@+id/AM_6"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/sixam_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="336dp"
            android:fontFamily="@font/nunito_black"
            android:text="@string/sixam_in"
            android:textAlignment="gravity"
            android:textColor="@color/letras_azul_turq_oscuro"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/OpenMap"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_red20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/AQUIVAELMAPA"
            android:gravity="center"
            android:textColor="@color/blue_letter"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.875"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <View
            android:id="@+id/color_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.58"
            android:background="#050040"
            tools:layout_editor_absoluteX="3dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
